The legal Practice part addeded

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                         dark_7: '#F3F3F3',
                         main: '#B68C5A',
                         main_deep: '#df953d',
+
+
                     }
                 }
             }
@@ -48,6 +50,20 @@
         h3 {
             font-family: 'EB Garamond', serif;
         }
+
+        .border_around {
+            border: 1px solid #E7E7E7;
+            border-top: none;
+        }
+
+        .border_bottom {
+            border-bottom: 1px solid #E7E7E7;
+        }
+
+        .border_side {
+            border-left: 1px solid #E7E7E7;
+            border-right: 1px solid #E7E7E7;
+        }
     </style>
 
 </head>
@@ -56,61 +72,62 @@
 
     <!-- Header Part -->
 
-    <header class="w-11/12 lg:w-10/12 mx-auto lg:pt-6">
-        <nav
-            class="bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 sticky  z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 ">
-            <div class=" flex flex-wrap items-center justify-between mx-auto">
-                <a href="" class="flex items-center">
-                    <img src="/assets/images/logo2.png" class="h-6 mr-3 sm:h-9" alt="Legal Logo">
-                </a>
-                <div class="flex md:order-2">
-                    <button type="button"
-                        class="text-white bg-main hover:bg-main_deep focus:ring-4 focus:outline-none focus:ring-main font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0">Get
-                        started</button>
-                    <button data-collapse-toggle="navbar-sticky" type="button"
-                        class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-                        aria-controls="navbar-sticky" aria-expanded="false">
-                        <span class="sr-only">Open main menu</span>
-                        <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                    </button>
-                </div>
-                <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                    <ul
-                        class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                        <li>
-                            <a href="#"
-                                class="block py-2 pl-3 pr-4 text-white bg-main_deep rounded md:bg-transparent md:text-main_deep md:p-0 dark:text-white"
-                                aria-current="page">Home</a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="block py-2 pl-3 pr-4 text-dark_3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-main_deep md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services
-                                <span><i class="fas fa-chevron-right ml-2"></i></span></a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="block py-2 pl-3 pr-4 text-dark_3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-main_deep md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Cases
-                                <span><i class="fas fa-chevron-right ml-2"></i></span></a></a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="block py-2 pl-3 pr-4 text-dark_3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-main_deep md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Blog
-                                <span><i class="fas fa-chevron-right ml-2"></i></span></a></a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="block py-2 pl-3 pr-4 text-dark_3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-main_deep md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact
-                                us<span><i class="fas fa-chevron-right ml-2"></i></span></a></a>
-                        </li>
-                    </ul>
-                </div>
+    <nav
+        class="w-11/12 lg:w-10/12 mx-auto lg:pt-6 bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 sticky  z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 ">
+        <div class=" flex flex-wrap items-center justify-between mx-auto">
+            <a href="" class="flex items-center">
+                <img src="/assets/images/logo2.png" class="h-6 mr-3 sm:h-9" alt="Legal Logo">
+            </a>
+            <div class="flex md:order-2">
+                <button type="button"
+                    class="text-white bg-main hover:bg-main_deep focus:ring-4 focus:outline-none focus:ring-main font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0">Get
+                    started</button>
+                <button data-collapse-toggle="navbar-sticky" type="button"
+                    class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    aria-controls="navbar-sticky" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                </button>
             </div>
-        </nav>
+            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+                <ul
+                    class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                    <li>
+                        <a href="#"
+                            class="block py-2 pl-3 pr-4 text-white bg-main_deep rounded md:bg-transparent md:text-main_deep md:p-0 dark:text-white"
+                            aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            class="block py-2 pl-3 pr-4 text-dark_3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-main_deep md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services
+                            <span><i class="fas fa-chevron-right ml-2"></i></span></a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            class="block py-2 pl-3 pr-4 text-dark_3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-main_deep md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Cases
+                            <span><i class="fas fa-chevron-right ml-2"></i></span></a></a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            class="block py-2 pl-3 pr-4 text-dark_3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-main_deep md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Blog
+                            <span><i class="fas fa-chevron-right ml-2"></i></span></a></a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            class="block py-2 pl-3 pr-4 text-dark_3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-main_deep md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact
+                            us<span><i class="fas fa-chevron-right ml-2"></i></span></a></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header class="w-11/12 lg:w-10/12 mx-auto lg:pt-6">
 
         <!-- Banner Part -->
 
@@ -139,6 +156,79 @@
         </nav>
 
     </header>
+
+    <!-- Main Part -->
+
+    <main class="w-11/12 lg:w-10/12 mx-auto">
+        <article class="practice_area mt-32">
+            <div class="text-center">
+                <h1 class="text-2xl md:text-4xl text-dark_2 font-extrabold mb-6">The Legal Practice Area</h1>
+                <p class="text-dark_3">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have <br> suffered
+                    alteration in some form,
+                    by injected humour.</p>
+            </div>
+
+            <section class="practice_card_container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-16">
+                <div class="card text-center p-12 border_bottom">
+                    <img class="mx-auto" src="./assets/images/business.png" alt="">
+                    <h3 class="text-3xl font-extrabold my-7 text-dark_2">Business Law</h3>
+                    <p class="text-dark_3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form,
+                        by injected humour.</p>
+                    <img src="./assets/images/Frame.png" class="my-8 mx-auto" alt="">
+                </div>
+                <div
+                    class="card text-center p-12 bg-gradient-to-b from-dark_6 to-[rgba(243, 243, 243, 0)] border_around">
+                    <img class="mx-auto" src="./assets/images/criminal.png" alt="">
+                    <h3 class="text-3xl font-extrabold my-7 text-dark_2">Criminal Law</h3>
+                    <p class="text-dark_3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form,
+                        by injected humour.</p>
+                    <img src="./assets/images/Frame.png" class="my-8 mx-auto" alt="">
+                </div>
+                <div class="card text-center p-12 border_bottom">
+                    <img class="mx-auto" src="./assets/images/child.png" alt="">
+                    <h3 class="text-3xl font-extrabold my-7 text-dark_2">Child Support</h3>
+                    <p class="text-dark_3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form,
+                        by injected humour.</p>
+                    <img src="./assets/images/Frame.png" class="my-8 mx-auto" alt="">
+                </div>
+                <div class="card text-center p-12">
+                    <img class="mx-auto" src="./assets/images/education.png" alt="">
+                    <h3 class="text-3xl font-extrabold my-7 text-dark_2">Education Law</h3>
+                    <p class="text-dark_3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form,
+                        by injected humour.</p>
+                    <img src="./assets/images/Frame.png" class="my-8 mx-auto" alt="">
+                </div>
+                <div class="card text-center p-12 border_side">
+                    <img class="mx-auto" src="./assets/images/divorce.png" alt="">
+                    <h3 class="text-3xl font-extrabold my-7 text-dark_2">Divorce Law</h3>
+                    <p class="text-dark_3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form,
+                        by injected humour.</p>
+                    <img src="./assets/images/Frame.png" class="my-8 mx-auto" alt="">
+                </div>
+                <div class="card text-center p-12">
+                    <img class="mx-auto" src="./assets/images/tax.png" alt="">
+                    <h3 class="text-3xl font-extrabold my-7 text-dark_2">Tax Law</h3>
+                    <p class="text-dark_3">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form,
+                        by injected humour.</p>
+                    <img src="./assets/images/Frame.png" class="my-8 mx-auto" alt="">
+                </div>
+
+            </section>
+        </article>
+    </main>
 
 
 
