--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         dark_7: '#F3F3F3',
                         main: '#B68C5A',
                         main_deep: '#df953d',
-
+                        slider_bg: '#111111cc',
 
                     }
                 }
@@ -73,7 +73,7 @@
     <!-- Header Part -->
 
     <nav
-        class="w-11/12 lg:w-10/12 mx-auto lg:pt-6 bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 sticky  z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 ">
+        class="w-11/12 lg:w-10/12 mx-auto lg:pt-6 bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 sticky  z-50 top-0 left-0 border-b border-gray-200 dark:border-gray-600 ">
         <div class=" flex flex-wrap items-center justify-between mx-auto">
             <a href="" class="flex items-center">
                 <img src="/assets/images/logo2.png" class="h-6 mr-3 sm:h-9" alt="Legal Logo">
@@ -160,6 +160,9 @@
     <!-- Main Part -->
 
     <main class="w-11/12 lg:w-10/12 mx-auto">
+
+        <!-- Practice Area -->
+
         <article class="practice_area mt-32">
             <div class="text-center">
                 <h1 class="text-2xl md:text-4xl text-dark_2 font-extrabold mb-6">The Legal Practice Area</h1>
@@ -226,6 +229,98 @@
                     <img src="./assets/images/Frame.png" class="my-8 mx-auto" alt="">
                 </div>
 
+            </section>
+        </article>
+
+        <!-- Client Tasty moni -->
+
+        <article class="practice_area mt-32">
+            <div class="text-center">
+                <h1 class="text-2xl md:text-4xl text-dark_2 font-extrabold mb-6">What Our Client Say</h1>
+                <p class="text-dark_3">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have <br> suffered
+                    alteration in some form,
+                    by injected humour.</p>
+            </div>
+
+            <section
+                class="slider_container bg-[url('./assets/images/banner.png')] bg-center bg-no-repeat mt-16 rounded-2xl">
+                <div class="overlay bg-slider_bg rounded-3xl">
+                    <div id="default-carousel"
+                        class="relative p-6 md:pl-24 md:pt-24 md:pr-24 lg:pl-28 lg:pt-28 lg:pr-28"
+                        data-carousel="static">
+                        <!-- Carousel wrapper -->
+                        <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+                            <!-- Item 1 -->
+                            <div class="hidden duration-700 ease-in-out text-center" data-carousel-item>
+                                <div class="slider_content text-white">
+                                    <div class="profile">
+                                        <img class="w-16 h-16 rounded-full border-[3px] mx-auto"
+                                            src="./assets/images/profile/profile-photos-4.png" alt="">
+                                    </div>
+                                    <h3 class="text-2xl font-extrabold mt-6">Fahad Sikder</h3>
+                                    <p class="title">UIX Designer</p>
+                                    <p class="text-dark_7 mt-8">Contrary to popular belief, Lorem Ipsum is not simply
+                                        random text. It has roots
+                                        in a piece of classical Latin literature
+                                        from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor
+                                        at Hampden-Sydney College in Virginia,
+                                        looked up one of the more obscure Latin words, consectetur.</p>
+                                </div>
+                            </div>
+                            <!-- Item 2 -->
+                            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                                <img src="/docs/images/carousel/carousel-2.svg"
+                                    class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                    alt="...">
+                            </div>
+                            <!-- Item 3 -->
+                            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                                <img src="/docs/images/carousel/carousel-3.svg"
+                                    class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                    alt="...">
+                            </div>
+                        </div>
+                        <!-- Slider indicators -->
+                        <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
+                            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 1"
+                                data-carousel-slide-to="0"></button>
+                            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2"
+                                data-carousel-slide-to="1"></button>
+                            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3"
+                                data-carousel-slide-to="2"></button>
+                        </div>
+                        <!-- Slider controls -->
+                        <button type="button"
+                            class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+                            data-carousel-prev>
+                            <span
+                                class="inline-flex items-center justify-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                                <svg aria-hidden="true" class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800"
+                                    fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M15 19l-7-7 7-7"></path>
+                                </svg>
+                                <span class="sr-only">Previous</span>
+                            </span>
+                        </button>
+                        <button type="button"
+                            class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+                            data-carousel-next>
+                            <span
+                                class="inline-flex items-center justify-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                                <svg aria-hidden="true" class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800"
+                                    fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M9 5l7 7-7 7"></path>
+                                </svg>
+                                <span class="sr-only">Next</span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
             </section>
         </article>
     </main>
