The tastimony slider perfectly optimized!

--- a/index.html
+++ b/index.html
@@ -243,24 +243,27 @@
                     by injected humour.</p>
             </div>
 
+            <!-- Slider Part -->
+
             <section
-                class="slider_container bg-[url('./assets/images/banner.png')] bg-center bg-no-repeat mt-16 rounded-2xl">
+                class="slider_container bg-[url('./assets/images/slider-1.jpg')] bg-center bg-cover bg-no-repeat mt-16 rounded-2xl">
                 <div class="overlay bg-slider_bg rounded-3xl">
                     <div id="default-carousel"
                         class="relative p-6 md:pl-24 md:pt-24 md:pr-24 lg:pl-28 lg:pt-28 lg:pr-28"
                         data-carousel="static">
                         <!-- Carousel wrapper -->
-                        <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+                        <div class="relative h-80 overflow-hidden rounded-lg md:h-96">
                             <!-- Item 1 -->
-                            <div class="hidden duration-700 ease-in-out text-center" data-carousel-item>
-                                <div class="slider_content text-white">
+                            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                                <div class="slider_content text-center text-white ">
                                     <div class="profile">
                                         <img class="w-16 h-16 rounded-full border-[3px] mx-auto"
-                                            src="./assets/images/profile/profile-photos-4.png" alt="">
+                                            src="./assets/images/profile/profile-1.png" alt="">
                                     </div>
                                     <h3 class="text-2xl font-extrabold mt-6">Fahad Sikder</h3>
                                     <p class="title">UIX Designer</p>
-                                    <p class="text-dark_7 mt-8">Contrary to popular belief, Lorem Ipsum is not simply
+                                    <p class="text-dark_7 text-xs md:text-base mt-8 ">Contrary to popular belief, Lorem
+                                        Ipsum is not simply
                                         random text. It has roots
                                         in a piece of classical Latin literature
                                         from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor
@@ -270,15 +273,39 @@
                             </div>
                             <!-- Item 2 -->
                             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                                <img src="/docs/images/carousel/carousel-2.svg"
-                                    class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                                    alt="...">
+                                <div class="slider_content text-center text-white">
+                                    <div class="profile">
+                                        <img class="w-16 h-16 rounded-full border-[3px] mx-auto"
+                                            src="./assets/images/profile/profile-2.png" alt="">
+                                    </div>
+                                    <h3 class="text-2xl font-extrabold mt-6">Bayezid Islam</h3>
+                                    <p class="title">JS Expert</p>
+                                    <p class="text-dark_7 text-xs md:text-base mt-8">Contrary to popular belief, Lorem
+                                        Ipsum is not simply
+                                        random text. It has roots
+                                        in a piece of classical Latin literature
+                                        from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor
+                                        at Hampden-Sydney College in Virginia,
+                                        looked up one of the more obscure Latin words, consectetur.</p>
+                                </div>
                             </div>
                             <!-- Item 3 -->
                             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                                <img src="/docs/images/carousel/carousel-3.svg"
-                                    class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                                    alt="...">
+                                <div class="slider_content text-center text-white">
+                                    <div class="profile">
+                                        <img class="w-16 h-16 rounded-full border-[3px] mx-auto"
+                                            src="./assets/images/profile/profile-3.png" alt="">
+                                    </div>
+                                    <h3 class="text-2xl font-extrabold mt-6">Abusayeed Hossain</h3>
+                                    <p class="title">Frontend Developer</p>
+                                    <p class="text-dark_7 text-xs md:text-base mt-8">Contrary to popular belief, Lorem
+                                        Ipsum is not simply
+                                        random text. It has roots
+                                        in a piece of classical Latin literature
+                                        from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor
+                                        at Hampden-Sydney College in Virginia,
+                                        looked up one of the more obscure Latin words, consectetur.</p>
+                                </div>
                             </div>
                         </div>
                         <!-- Slider indicators -->
@@ -292,7 +319,7 @@
                         </div>
                         <!-- Slider controls -->
                         <button type="button"
-                            class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+                            class="absolute top-0 left-0 z-30 hidden md:block items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
                             data-carousel-prev>
                             <span
                                 class="inline-flex items-center justify-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
@@ -306,7 +333,7 @@
                             </span>
                         </button>
                         <button type="button"
-                            class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+                            class="absolute top-0 right-0 z-30 hidden md:block items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
                             data-carousel-next>
                             <span
                                 class="inline-flex items-center justify-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
