Accordion QnA addeded

--- a/index.html
+++ b/index.html
@@ -377,7 +377,10 @@
                                         <path fill-rule="evenodd"
                                             d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
                                             clip-rule="evenodd"></path>
-                                    </svg> What is Flowbite?</span>
+                                    </svg>
+                                    <h3 class="text-dark_2 text-xl font-extrabold">The difference between flex and grid
+                                        box ?</h3>
+                                </span>
                                 <svg data-accordion-icon class="w-6 h-6 rotate-180 shrink-0" fill="currentColor"
                                     viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd"
@@ -386,18 +389,17 @@
                                 </svg>
                             </button>
                         </h2>
-                        <div id="accordion-open-body-1" class="hidden" aria-labelledby="accordion-open-heading-1">
+                        <div id="accordion-open-body-1" class="hidden bg-dark_7"
+                            aria-labelledby="accordion-open-heading-1">
                             <div
                                 class="p-5 font-light border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900">
-                                <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is an open-source library of
-                                    interactive
-                                    components built on top of Tailwind CSS including buttons, dropdowns, modals,
-                                    navbars, and more.</p>
-                                <p class="text-gray-500 dark:text-gray-400">Check out this guide to learn how to <a
-                                        href="/docs/getting-started/introduction/"
-                                        class="text-blue-600 dark:text-blue-500 hover:underline">get started</a> and
-                                    start developing
-                                    websites even faster with components on top of Tailwind CSS.</p>
+                                <p class=" mb-2 text-dark_3 dark:text-gray-400">Grid is best for two-dimensional
+                                    layouts with many elements that need to be precisely positioned relative to each
+                                    other.
+                                </p>
+                                <p class=" text-dark_3 dark:text-gray-400">Flexbox is better for one-dimensional or
+                                    single-line layouts where you just need to space a bunch of elements a certain
+                                    way</p>
                             </div>
                         </div>
                         <h2 id="accordion-open-heading-2">
@@ -410,7 +412,10 @@
                                         <path fill-rule="evenodd"
                                             d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
                                             clip-rule="evenodd"></path>
-                                    </svg>Is there a Figma file available?</span>
+                                    </svg>
+                                    <h3 class="text-dark_2 text-xl font-extrabold">For what purpose are media queries
+                                        used ?</h3>
+                                </span>
                                 <svg data-accordion-icon class="w-6 h-6 shrink-0" fill="currentColor"
                                     viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd"
@@ -419,17 +424,16 @@
                                 </svg>
                             </button>
                         </h2>
-                        <div id="accordion-open-body-2" class="hidden" aria-labelledby="accordion-open-heading-2">
+                        <div id="accordion-open-body-2" class="hidden bg-dark_7"
+                            aria-labelledby="accordion-open-heading-2">
                             <div class="p-5 font-light border border-b-0 border-gray-200 dark:border-gray-700">
-                                <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is first conceptualized and
-                                    designed using the
-                                    Figma software so everything you see in the library has a design equivalent in our
-                                    Figma file.</p>
-                                <p class="text-gray-500 dark:text-gray-400">Check out the <a
-                                        href="https://flowbite.com/figma/"
-                                        class="text-blue-600 dark:text-blue-500 hover:underline">Figma design system</a>
-                                    based on the
-                                    utility classes from Tailwind CSS and components from Flowbite.</p>
+                                <p class="mb-2 text-dark_3 dark:text-gray-400">Media queries are a key part of
+                                    responsive web design, as they allow you to create different layouts depending on
+                                    the
+                                    size of the viewport, but they can also be used to detect other things about the
+                                    environment your site is running on...</p>
+                                <p class="text-dark_3 dark:text-gray-400">For example whether the user is using a
+                                    touchscreen rather than a mouse.</p>
                             </div>
                         </div>
                         <h2 id="accordion-open-heading-3">
@@ -442,7 +446,10 @@
                                         <path fill-rule="evenodd"
                                             d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
                                             clip-rule="evenodd"></path>
-                                    </svg> What are the differences between Flowbite and Tailwind UI?</span>
+                                    </svg>
+                                    <h3 class="text-dark_2 text-xl font-extrabold">What is the box model in CSS and how
+                                        does it work ?</h3>
+                                </span>
                                 <svg data-accordion-icon class="w-6 h-6 shrink-0" fill="currentColor"
                                     viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd"
@@ -451,30 +458,15 @@
                                 </svg>
                             </button>
                         </h2>
-                        <div id="accordion-open-body-3" class="hidden" aria-labelledby="accordion-open-heading-3">
+                        <div id="accordion-open-body-3" class="hidden bg-dark_7"
+                            aria-labelledby="accordion-open-heading-3">
                             <div class="p-5 font-light border border-t-0 border-gray-200 dark:border-gray-700">
-                                <p class="mb-2 text-gray-500 dark:text-gray-400">The main difference is that the core
-                                    components from
-                                    Flowbite are open source under the MIT license, whereas Tailwind UI is a paid
-                                    product. Another
-                                    difference is that Flowbite relies on smaller and standalone components, whereas
-                                    Tailwind UI offers
-                                    sections of pages.</p>
-                                <p class="mb-2 text-gray-500 dark:text-gray-400">However, we actually recommend using
-                                    both Flowbite,
-                                    Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from
-                                    using the best of
-                                    two worlds.</p>
-                                <p class="mb-2 text-gray-500 dark:text-gray-400">Learn more about these technologies:
-                                </p>
-                                <ul class="pl-5 text-gray-500 list-disc dark:text-gray-400">
-                                    <li><a href="https://flowbite.com/pro/"
-                                            class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a>
-                                    </li>
-                                    <li><a href="https://tailwindui.com/" rel="nofollow"
-                                            class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a>
-                                    </li>
-                                </ul>
+                                <p class="mb-2 text-dark_3 dark:text-gray-400">The CSS box model is a container that
+                                    contains multiple properties including borders, margin, padding, and the content
+                                    itself.</p>
+                                <p class="mb-2 text-dark_3 dark:text-gray-400">It is used to create the design and
+                                    layout of web pages. According to the CSS box model, the web browser supplies each
+                                    element as a square prism.</p>
                             </div>
                         </div>
                         <h2 id="accordion-open-heading-4">
@@ -487,7 +479,11 @@
                                         <path fill-rule="evenodd"
                                             d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
                                             clip-rule="evenodd"></path>
-                                    </svg> What are the differences between Flowbite and Tailwind UI?</span>
+                                    </svg>
+                                    <h3 class="text-dark_2 text-xl font-extrabold">What is the use of semantic tags ?
+                                        <br> Give some examples<br>
+                                    </h3>
+                                </span>
                                 <svg data-accordion-icon class="w-6 h-6 shrink-0" fill="currentColor"
                                     viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd"
@@ -496,30 +492,20 @@
                                 </svg>
                             </button>
                         </h2>
-                        <div id="accordion-open-body-4" class="hidden" aria-labelledby="accordion-open-heading-4">
+                        <div id="accordion-open-body-4" class="hidden bg-dark_7"
+                            aria-labelledby="accordion-open-heading-4">
                             <div class="p-5 font-light border border-t-0 border-gray-200 dark:border-gray-700">
-                                <p class="mb-2 text-gray-500 dark:text-gray-400">The main difference is that the core
-                                    components from
-                                    Flowbite are open source under the MIT license, whereas Tailwind UI is a paid
-                                    product. Another
-                                    difference is that Flowbite relies on smaller and standalone components, whereas
-                                    Tailwind UI offers
-                                    sections of pages.</p>
-                                <p class="mb-2 text-gray-500 dark:text-gray-400">However, we actually recommend using
-                                    both Flowbite,
-                                    Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from
-                                    using the best of
-                                    two worlds.</p>
-                                <p class="mb-2 text-gray-500 dark:text-gray-400">Learn more about these technologies:
+                                <p class="mb-2 text-dark_3 dark:text-gray-400">Semantic HTML tags are tags that define
+                                    the meaning of the content they contain.</p>
+                                <p class="mb-2 text-dark_3 dark:text-gray-400">
+                                    For example, tags like
+                                    &lt;header&gt;, &lt;article&gt;, and &lt;footer&gt;
+                                    are semantic HTML tags. <br> They clearly indicate the
+                                    role of the content they contain. <br>
+                                    On the other hand, tags like
+                                    &lt;div&gt; and &lt;span&gt;
+                                    are typical examples of non-semantic HTML elements.
                                 </p>
-                                <ul class="pl-5 text-gray-500 list-disc dark:text-gray-400">
-                                    <li><a href="https://flowbite.com/pro/"
-                                            class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a>
-                                    </li>
-                                    <li><a href="https://tailwindui.com/" rel="nofollow"
-                                            class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a>
-                                    </li>
-                                </ul>
                             </div>
                         </div>
                     </div>
